优化：优化tokens计算，原来的实现有些太老了，导致长文本有OOM的风险